--- a/demo/index.html
+++ b/demo/index.html
@@ -15,14 +15,13 @@
 	<title>Easy Gallery Demo</title>
 </head>
 
-<body style="padding-top: 3.5rem; padding-bottom: 1rem; min-height: 100vh; position: relative;">
+<body>
 
 	<div class="page-content">
         <div class="row no-gutters">
             <div class="container-fluid gallery-display"></div>
         </div>
 	</div>
-
 
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
